--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,18 @@ a {
     width: 90vw;
   }
 }
+
+
+/** no user */
+.no-user {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 94px);
+}
+
+.no-user-text {
+  font-size: 3rem;
+  font-weight: 700;
+  color:rgb(49, 61, 102);
+}
